unpackaged/main/default/objects/Escalation_Tracking__c/Escalation_Tracking__c.object-meta.xml
<CustomObject>
    <label>Escalation Tracking</label>
    <nameField>
        <displayFormat>ET-{000000}</displayFormat>
        <label>Escalation Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalations Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>