unpackaged/main/default/objects/Escalation_Tracking__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job has been escalated due to CSR adding to nonwhite space.</fullName>
            </value>
            <value>
                <fullName>Job has been escalated due to CSR adding to tech which goes over max hours allowed to work.</fullName>
            </value>
            <value>
                <fullName>Job has been escalated due to CSR converting time wrong</fullName>
            </value>
            <value>
                <fullName>Job has been escalated due to CSR incorrect date placement.</fullName>
            </value>
            <value>
                <fullName>Job has been escalated due to CSR No OTDR/Test Set</fullName>
            </value>
            <value>
                <fullName>Job has been escalated due to CSR not actioning the case/work order/SA</fullName>
            </value>
            <value>
                <fullName>Job has been escalated due to CSR not adding a blocker.</fullName>
            </value>
            <value>
                <fullName>Job has been escalated due to CSR not confirming access hours or incorrect arrival window on ticket.</fullName>
            </value>
            <value>
                <fullName>Job has been escalated due to CSR not creating a ticket for second tech requirement; safety/scissor lift.</fullName>
            </value>
            <value>
                <fullName>Job has been escalated due to CSR not doing their assigned jeopardy check</fullName>
            </value>
            <value>
                <fullName>Job has been escalated due to CSR not following the escalation process</fullName>
            </value>
            <value>
                <fullName>Job has been escalated due to CSR overbooking the technician</fullName>
            </value>
            <value>
                <fullName>Job has been escalated due to CSR placing on non-badged or unskilled tech.</fullName>
            </value>
            <value>
                <fullName>Job has been escalated due to Tech caused job to be missed</fullName>
            </value>
            <value>
                <fullName>Job has been escalated due to Tech not answering phone</fullName>
            </value>
            <value>
                <fullName>Job has been escalated due to Tech over hours/ Rest period</fullName>
            </value>
            <value>
                <fullName>Job has been escalated due to Tech refusal/ conflicting work</fullName>
            </value>
            <value>
                <fullName>Job has been escalated due to Tech Vehicle breakdown/ maintenance</fullName>
            </value>
            <value>
                <fullName>Job has been escalated due to Tech was not prepared</fullName>
            </value>
            <value>
                <fullName>Job has been escalated due to Unprofessional behavior</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>