unpackaged/main/default/objects/Escalation_Tracking__c/fields/Resulted_in_Penalty__c.field-meta.xml
<CustomField>
    <fullName>Resulted_in_Penalty__c</fullName>
    <label>Resulted in Penalty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>