unpackaged/main/default/objects/Escalation_Tracking__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Escalations Tracking</relationshipLabel>
    <relationshipName>Escalations_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>