unpackaged/main/default/objects/Escalation_Tracking__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalations_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>